Index: Combined separate image and button links into single ones.

--- a/new/index-en.html
+++ b/new/index-en.html
@@ -24,8 +24,7 @@
             <div class="panel-body">
               <h3 class="mrgn-tp-0">Design guide</h3>
               <p>Offers a large selection of design and layout features for both basic and complex designs.</p>
-              <p><a href="design/index-en.html"><img src="design.jpg" alt="Design guide" class="img-responsive" /></a></p>
-              <p><a href="design/index-en.html" class="btn btn-primary btn-block">Design guide</a></p>
+              <p><a href="design/index-en.html" style="text-decoration: none;"><img class="img-responsive mrgn-bttm-sm" alt="" src="design.jpg"><span class="btn btn-primary btn-block">Design guide</span></a></p>
             </div>
           </div>
         </div>
@@ -34,8 +33,7 @@
             <div class="panel-body">
               <h3 class="mrgn-tp-0">Writing guide</h3>
               <p>Create content that is written for the web and follows specific technical writing requirements.</p>
-              <p><a href="writing/index-en.html"><img src="writing.jpg" alt="Writing guide" class="img-responsive" /></a></p>
-              <p><a href="writing/index-en.html" class="btn btn-primary btn-block">Writing guide</a></p>
+              <p><a href="writing/index-en.html" style="text-decoration: none;"><img class="img-responsive mrgn-bttm-sm" alt="" src="writing.jpg"><span class="btn btn-primary btn-block">Writing guide</span></a></p>
             </div>
           </div>
         </div>
@@ -46,8 +44,7 @@
             <div class="panel-body">
               <h3 class="mrgn-tp-0">Usability guide</h3>
               <p>User behaviour needs to be understood in order to create content that is usable.</p>
-              <p><a href="usability/index-en.html"><img src="usability.jpg" alt="Usability guide" class="img-responsive" /></a></p>
-              <p><a href="usability/index-en.html" class="btn btn-primary btn-block">Usability guide</a></p>
+              <p><a href="usability/index-en.html" style="text-decoration: none;"><img class="img-responsive mrgn-bttm-sm" alt="" src="usability.jpg"><span class="btn btn-primary btn-block">Usability guide</span></a></p>
             </div>
           </div>
         </div>
@@ -56,8 +53,7 @@
             <div class="panel-body">
               <h3 class="mrgn-tp-0">Accessibility guide</h3>
               <p>Create and code content so that is accessible to all users, regardless of ability or disability.</p>
-              <p><a href="accessibility/index-en.html"><img src="accessibility.jpg" alt="Accessibility guide" class="img-responsive" /></a></p>
-              <p><a href="accessibility/index-en.html" class="btn btn-primary btn-block">Accessibility guide</a></p>
+              <p><a href="accessibility/index-en.html" style="text-decoration: none;"><img class="img-responsive mrgn-bttm-sm" alt="" src="accessibility.jpg"><span class="btn btn-primary btn-block">Accessibility guide</span></a></p>
             </div>
           </div>
         </div>
